--- a/ns/css/styles.css
+++ b/ns/css/styles.css
@@ -636,17 +636,42 @@ strong {
   BACKGROUND IMAGE SECTION        
 -----------------------------------------*/
 .section-bg-image {
-    background-image: url('../images/frederik-rosar-NDSZcCfnsbY-unsplash.jpg');
+    position: relative;
+    margin-bottom: -70px;
+    overflow: hidden;
+}
+
+.section-bg-image-BACKGROUNDSELF {
+    background-image: url('../images/dana-marin-amsterdamian-Sa9msnED0RA-unsplash\ \(1\).jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    filter: blur(8px) saturate(0.6);
+    transform: scale(105%);
+}
+
+.section-bg-image .container {
     position: relative;
-    margin-bottom: -70px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.section-bg-image .row .col-lg-6:nth-of-type(2) {
+    max-width: min(40%, 400px);
+    margin-left: 40px;
+}
+
+.section-bg-image svg {
+    position: relative;
+    z-index: 1;
 }
 
 .section-bg-image .container+svg {
     transform: rotate(180deg);
-    position: relative;
     bottom: -1px;
 }
 
@@ -666,24 +691,9 @@ strong {
     padding: 10px 15px;
 }
 
-.section-bg-image-block .input-group-text {
-    background-color: transparent;
-    border: 0;
-}
-
-.section-bg-image-block input[type="email"] {
-    border: 0;
-    box-shadow: none;
-    margin-bottom: 0;
-    padding-left: 0;
-}
-
-.section-bg-image-block button[type="submit"] {
-    background-color: var(--primary-color);
-    border: 0;
-    border-radius: var(--border-radius-large) !important;
-    color: var(--white-color);
-    max-width: 150px;
+.section-bg-image .member-block-image-wrap {
+    /* filter: drop-shadow(0 0 10px #f1ecc8);
+    border: 1px rgba(241, 236, 200, 0.2) solid; */
 }
 
 
@@ -1131,6 +1141,22 @@ strong {
 
     .hero-section .row {
         margin-top: 100px;
+    }
+
+    .section-bg-image .container {
+        left: unset;
+        transform: unset;
+    }
+
+    .section-bg-image .row .col-lg-6:nth-of-type(2) {
+        width: 80%;
+        max-width: 500px;
+        padding-top: 40px;
+        margin-left: unset;
+    }
+
+    .section-bg-image .row {
+        justify-content: center;
     }
 }
 
