--- a/css/styles.css
+++ b/css/styles.css
@@ -617,7 +617,7 @@ strong {
 }
 
 .section-bg-image-BACKGROUNDSELF {
-    background-image: url('../images/dana-marin-amsterdamian-Sa9msnED0RA-unsplash\ \(1\).jpg');
+    background-image: url('../images/backgroundImageWhoMakesEcho.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
