--- a/css/styles.css
+++ b/css/styles.css
@@ -559,7 +559,7 @@ strong {
   HERO        
 -----------------------------------------*/
 .hero-section {
-    background-image: url('../images/ultrasoundScan.jpg');
+    background-image: url('../images/IMG_20231128_1_1_edited_pincel_app.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
